19342
```
% tail sandbox/{tag,usetag}.scala
==> sandbox/tag.scala <==
object Tag {
  @inline def apply[@specialized A, T](a: A): A = a
}

==> sandbox/usetag.scala <==
trait Foo

object Test {
  val y = Tag[Double, Foo](3.3)
}

% qscalac -version && qscalac sandbox/tag.scala && qscalac -Xresident
Scala compiler version 2.11.3-20140930-174528-a52db7f163 -- Copyright 2002-2013, LAMP/EPFL

nsc> sandbox/usetag.scala

nsc> sandbox/usetag.scala
sandbox/usetag.scala:4: error: wrong number of type parameters for method apply$mDc$sp: [T](a: Double)Double
  val y = Tag[Double, Foo](3.3)
             ^
```
